<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="65dp"
        android:src="@drawable/imagen1"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="14sp"
        android:padding="8dp"
        android:minHeight="48dp"
        android:background="?attr/editTextBackground" />


    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/input_margin"
        android:text="@string/terms"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="0dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>